--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-io.elementary.shortcut-overlay (0.1) bionic; urgency=medium
+io.elementary.shortcut-overlay (1.0) bionic; urgency=medium
 
   * Initial release.
 
- -- Daniel Fore <daniel@elementary.io>  Wed, 07 Mar 2018 12:57:58 -0800
+ -- Cody Garver <cody@elementary.io>  Tue, 05 Jun 2018 03:44:13 -0500
