--- a/po/ru.po
+++ b/po/ru.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: io.elementary.shortcut-overlay\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-11 22:44-0700\n"
-"PO-Revision-Date: 2018-09-07 00:05+0000\n"
+"PO-Revision-Date: 2019-06-07 18:28+0700\n"
 "Last-Translator: Kirill Romanov <djaler1@gmail.com>\n"
 "Language-Team: Russian <https://weblate.elementary.io/projects/desktop/"
 "shortcut-overlay/ru/>\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 3.0.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #: src/MainWindow.vala:23
 msgid "Keyboard Shortcuts"
@@ -34,71 +34,71 @@ msgstr "Выключено"
 
 #: src/Views/ShortcutsView.vala:30
 msgid "Windows"
-msgstr ""
+msgstr "Окна"
 
 #: src/Views/ShortcutsView.vala:31
 msgid "Close window:"
-msgstr ""
+msgstr "Закрыть:"
 
 #: src/Views/ShortcutsView.vala:33
 msgid "Cycle windows:"
-msgstr ""
+msgstr "Переключение между окнами:"
 
 #: src/Views/ShortcutsView.vala:35
 msgid "Toggle maximized:"
-msgstr ""
+msgstr "Развернуть:"
 
 #: src/Views/ShortcutsView.vala:37
 msgid "Tile left:"
-msgstr ""
+msgstr "Закрепить слева:"
 
 #: src/Views/ShortcutsView.vala:39
 msgid "Tile right:"
-msgstr ""
+msgstr "Закрепить справа:"
 
 #: src/Views/ShortcutsView.vala:41
 msgid "Move to left workspace:"
-msgstr ""
+msgstr "Переместить на рабочий стол слева:"
 
 #: src/Views/ShortcutsView.vala:43
 msgid "Move to right workspace:"
-msgstr ""
+msgstr "Переместить на рабочий стол справа:"
 
 #: src/Views/ShortcutsView.vala:45
 msgid "Picture in Picture Mode:"
-msgstr ""
+msgstr "Режим картинка в картинке:
 
 #: src/Views/ShortcutsView.vala:48
 msgid "Workspaces"
-msgstr ""
+msgstr "Рабочие столы"
 
 #: src/Views/ShortcutsView.vala:49
 msgid "Multitasking View:"
-msgstr ""
+msgstr "Многозадачный вид:"
 
 #: src/Views/ShortcutsView.vala:51
 msgid "Switch left:"
-msgstr ""
+msgstr "Переключиться на рабочий стол слева:"
 
 #: src/Views/ShortcutsView.vala:53
 msgid "Switch right:"
-msgstr ""
+msgstr "Переключиться на рабочий стол справа:"
 
 #: src/Views/ShortcutsView.vala:55
 msgid "Switch to first:"
-msgstr ""
+msgstr "Переключиться на первый рабочий стол:"
 
 #: src/Views/ShortcutsView.vala:57
 msgid "Switch to new:"
-msgstr ""
+msgstr "Переключиться на новый рабочий стол:"
 
 #: src/Views/ShortcutsView.vala:59
 msgid "Cycle workspaces:"
-msgstr ""
+msgstr "Переключение между рабочими столами:"
 
 #: src/Views/ShortcutsView.vala:104
 msgid "System"
-msgstr ""
+msgstr "Система"
 
 #: src/Views/ShortcutsView.vala:105
 msgid "Applications Menu:"
@@ -126,11 +126,11 @@ msgstr "Выйти из системы:"
 
 #: src/Views/ShortcutsView.vala:117
 msgid "Switch keyboard layout:"
-msgstr ""
+msgstr "Переключить раскладку клавиатуры:"
 
 #: src/Views/ShortcutsView.vala:120
 msgid "Screenshots"
-msgstr ""
+msgstr "Снимки экрана"
 
 #: src/Views/ShortcutsView.vala:121
 msgid "Grab the whole screen:"
