--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+io.elementary.shortcut-overlay (8.0.0) noble; urgency=medium
+
+  * Release 8.0.0
+
+ -- Danielle Foré <danielle@elementary.io>  Thu, 06 Jun 2024 13:39:40 -0700
+
 io.elementary.shortcut-overlay (2.0.1) bionic; urgency=medium
 
   * Release 2.0.1 (#135)
