--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+io.elementary.shortcut-overlay (8.0.1) noble; urgency=medium
+
+  * Release 8.0.1
+
+ -- Danielle Foré <danielle@elementary.io>  Tue, 20 Aug 2024 08:29:58 -0700
+
 io.elementary.shortcut-overlay (8.0.0) noble; urgency=medium
 
   * Release 8.0.0
