--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+io.elementary.shortcut-overlay (8.1.0) noble; urgency=medium
+
+  * Release 8.1.0
+
+ -- Danielle Foré <danielle@elementary.io>  Fri, 30 May 2025 12:20:06 -0700
+
 io.elementary.shortcut-overlay (8.0.1) noble; urgency=medium
 
   * Release 8.0.1
